# nf-scanner-core

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  main.py  pyproject.toml
.github/workflows/: black-lint-check.yml  python-execute-tests.yml
examples/: basic_usage.py
src/nf_scanner_core/: __init__.py  cli.py  extractor.py  image_extractor.py  models.py  nfse_parser.py  pdf_extractor.py
src/nf_scanner_core/extractors/: __init__.py  ai_image_extractor.py  image_extractor.py  pdf_extractor.py
src/nf_scanner_core/models/: __init__.py  construcao_civil.py  contato.py  empresa.py  endereco.py  nfse.py  servico_detalhe.py  tributos_federais.py  valores.py
src/nf_scanner_core/parsers/: __init__.py  ai_nfse_parser.py  nfse_parser.py
src/nf_scanner_core/utils/: __init__.py  ai_prompts.py  config.py  file_utils.py
test_inputs/: NFSe_ficticia_layout_completo_prestador.json
tests/: __init__.py  test_ai_nfse_parser.py  test_nfse_parser.py
tests/ai/: __init__.py  test_ai_nfse_parser.py  test_extractor_modes.py
tests/py/: __init__.py  test_nfse_parser.py
