[project]
name = "nf-scanner-core"
version = "2.0"
description = "Biblioteca para leitura de Notas Fiscais."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Arthur Ferreira", email = "fr.arthur.fr@gmail.com"}
]
dependencies = [
    "pymupdf>=1.26.0",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0", 
    "python-dotenv>=1.0.0",
    "anthropic>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "uv",
    "black",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
nf-extract = "nf_scanner_core.cli:main"
